Prevent regulart text inputs from overflowing

--- a/assets/css/src/_utilities.wp-admin.scss
+++ b/assets/css/src/_utilities.wp-admin.scss
@@ -7,8 +7,17 @@ body[class*="wpbr_review_page"] #wpcontent {
 	padding: 0;
 }
 
-// Custom menu icon.
+// Set dimensions of custom menu icon to match other icons.
 .menu-icon-wpbr_review .wp-menu-image img {
 	height: 18px;
 	width: 18px;
+}
+
+// Prevent text inputs from overflowing container.
+.regular-text {
+	width: 100%;
+
+	@media ( min-width: 783px ) {
+		max-width: 25em;
+	}
 }
